desloppify: fix mid-elegance-exploration cluster (3 issues)
- Add FetchExamplesResult record bundling examples + bcqlPattern,
  eliminating independent bcqlQuery construction in ExplorationHandlers
  (double_bcql_construction)
- Route handleSemanticFieldExamples through buildExploreResponseEnvelope
  so it follows the same response structure as its three sibling handlers
  (examples_bypasses_envelope)
- Replace CROSS_RELATIONAL magic-string parameter in buildExploreResponseEnvelope
  with a typed buildCrossRelationalResponseEnvelope overload; rename the
  existing overload to accept RelationConfig instead of raw String
  (cross_relational_magic_string)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>